Add README.md, update code structure, and include test files